# nuke-ML-server

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md
Models/: baseModel.py
Models/arcore/: model.py
Models/blur/: model.py
Models/classTemplateTF/: README.md  model.py  train_classification.py
Models/classTemplateTF/util/: model_builder.py  util.py
Models/common/: model_builder.py  util.py
Models/densePose/: model.py  vis.py
Models/densepose/: model.py  utils.py  vis.py  visualisation.py
Models/mrcnn/: model.py  utils.py  vis.py
Models/regressionTemplateTF/: README.md  model.py  train_regression.py
Models/trainingTemplateTF/: README.md  model.py  train_model.py
Models/trainingTemplateTF/checkpoints/: trainingTemplateTF.model-0.index
Models/trainingTemplateTF/util/: model_builder.py  util.py
Plugins/Client/: CMakeLists.txt  DLClient.cpp  DLClient.h  DLClientComms.cpp  DLClientComms.h  DLClientModelManager.cpp  DLClientModelManager.h  MLClient.cpp  MLClient.h  MLClientComms.cpp  MLClientComms.h  MLClientGeo.cpp  MLClientGeo.h  MLClientMixin-inl.h  MLClientMixin.h  MLClientModelManager.cpp  MLClientModelManager.h  message.pb.cc  message.pb.h  message.proto
Plugins/Server/: .dockerignore  Dockerfile  message.proto  message_pb2.py  py2.Dockerfile  server.py
